syntax = "proto3";

package feedback;

import "google/protobuf/timestamp.proto";

option go_package = "your_project_path/gen/feedbackpb;feedbackpb";

message UUID {
  string value = 1;
}

message Feedback {
  UUID id = 1;
  string text = 2;
  string type = 3;
  string priority = 4;
  UUID task_id = 5;
  UUID project_id = 6;
  google.protobuf.Timestamp created_date = 7;
  string direction = 8;
  string status = 9;
}

message ListFeedbacksRequest {
  Feedback filter = 1; // можно использовать для фильтрации
}

message ListFeedbacksResponse {
  repeated Feedback feedbacks = 1;
}

service FeedbackService {
  rpc ListFeedbacks(ListFeedbacksRequest) returns (ListFeedbacksResponse);
}
